<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43.0dip"
        android:src="@drawable/div" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:fadeScrollbars="true"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="15.0dip"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#ffffffff"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:gravity="center"
                android:text="@string/ratetext"
                android:textColor="#ffffffff"
                android:textSize="16sp" />

            
             <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1.0dip"
                android:src="@drawable/div" />
             <com.google.android.gms.plus.PlusOneButton
  xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
  android:id="@+id/plus_one_button"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  plus:size="tall"
  plus:annotation="bubble" />
             <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1.0dip"
                android:src="@drawable/div" />
             <Button
                android:id="@+id/_rate"
                  android:gravity="bottom|center"
               android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/change"
                android:text="@string/ratenr1"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />

            <Button
                android:id="@+id/_no"
                  android:gravity="bottom|center"
               android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/change"
                android:text="@string/ratenr2"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>