<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/myImageViewText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/bgtxt"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="26.0sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:fadeScrollbars="false"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="15.0dip"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:src="@drawable/div" />

            <Button
                android:id="@+id/set_theme_go"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="7.0dip"
                android:background="@drawable/change"
                android:gravity="bottom|center"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:text="@string/apply_theme"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/div" />

            <!-- Banner AD MOB ***************** -->

            <LinearLayout
                android:id="@+id/adView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"></LinearLayout>

            <!-- Banner AD MOB **************** -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/div" />

            <Button
                android:id="@+id/settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="7.0dip"
                android:background="@drawable/change"
                android:gravity="bottom|center"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:text="@string/settings"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1.0dip"
                android:src="@drawable/div" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false">


                <!--    
                 
                 <ImageButton android:id="@+id/rateBtn"
    android:src="@drawable/rate_button" 
    android:layout_marginTop="30.0dip"
    android:layout_marginRight="15.0dip"
                    android:layout_marginLeft="30.0dip"
  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
     android:layout_weight="1"
     android:background="#00EC68B7"
     android:adjustViewBounds="true"
     android:scaleType="fitCenter"
                    
/>
        -->


                <Button
                    android:id="@+id/rateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="30.0dip"
                    android:layout_weight="1"
                    android:background="@drawable/select"
                    android:gravity="bottom|center"
                    android:paddingBottom="22dp"
                    android:paddingTop="10dp"
                    android:text="@string/ratebtn"
                    android:textColor="#ffffffff"
                    android:textSize="16.0sp" />


                <Button
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"

                    android:layout_marginRight="30.0dip"
                    android:layout_marginTop="30.0dip"
                    android:layout_weight="1"
                    android:background="@drawable/change"
                    android:gravity="bottom|center"
                    android:paddingBottom="22dp"
                    android:paddingTop="10dp"
                    android:text="@string/more"
                    android:textColor="#ffffffff"
                    android:textSize="16.0sp" />


            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1.0dip"
                android:src="@drawable/div" />

            <TextView
                android:id="@+id/myImageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/bgtxt"
                android:gravity="center"
                android:text="@string/recommend"
                android:textColor="#ffffff"
                android:textSize="24.0sp" />


            <!--
         <ImageButton android:id="@+id/sms"
             android:src="@drawable/imgbuton1"
             android:layout_marginTop="7.0dip"
             android:padding="1dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"

              android:background="#00EC68B7"
               android:adjustViewBounds="true"
              android:scaleType="fitCenter"

         />

         <ImageButton android:id="@+id/locker"
             android:src="@drawable/imgbutton2"
             android:layout_marginTop="7.0dip"
             android:padding="1dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"

              android:background="#00EC68B7"
              android:adjustViewBounds="true"
              android:scaleType="fitCenter"

         />

             <ImageButton android:id="@+id/launcher"
             android:src="@drawable/imgbutton3"
             android:layout_marginTop="7.0dip"
             android:padding="1dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
              android:layout_weight="1"
              android:background="#00EC68B7"
               android:adjustViewBounds="true"
              android:scaleType="fitCenter"

         />        -->
            <ImageButton
                android:id="@+id/i1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="24dp"
                android:scaleType="fitCenter"
                android:src="@drawable/select1"


                />


            <ImageButton
                android:id="@+id/i2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="24dp"
                android:scaleType="fitCenter"
                android:src="@drawable/select2"

                />


            <ImageButton
                android:id="@+id/i3"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"

                android:paddingTop="24dp"
                android:scaleType="fitCenter"
                android:src="@drawable/select3"

                />


            <!--
            <Button
                            android:id="@+id/rateBtn"
                           android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="30.0dip"
                            android:layout_marginRight="30.0dip"
                            android:layout_marginTop="30.0dip"
                            android:background="@drawable/button1"
                            android:text="tema2"
                            android:textColor="#ff7c7c7c"
                            android:textSize="20.0sp" />

                        <Button
                            android:id="@+id/rateBtn"
                           android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="30.0dip"
                            android:layout_marginRight="30.0dip"
                            android:layout_marginTop="30.0dip"
                            android:background="@drawable/button1"
                            android:text="tema3"
                            android:textColor="#ff7c7c7c"
                            android:textSize="20.0sp" />


                            -->


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1.0dip"
                android:src="@drawable/div" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>